replace Congo with UA

--- a/flags/templates/round-table/index.phtml
+++ b/flags/templates/round-table/index.phtml
@@ -12,7 +12,7 @@ function getCountries () {
     var countries = [
         { flagUrl: "/flag-images/br.png", alpha2: "BR", name: "Brazil" },
         { flagUrl: "/flag-images/cu.png", alpha2: "CU", name: "Cuba" },
-        { flagUrl: "/flag-images/cg.png", alpha2: "CG", name: "Congo" },
+        { flagUrl: "/flag-images/ua.png", alpha2: "CG", name: "Ukraine" },
         { flagUrl: "/flag-images/gr.png", alpha2: "GR", name: "Greece" }
     ]
     return countries
